--- a/computing/references/books_notes.mkd
+++ b/computing/references/books_notes.mkd
@@ -7,3 +7,12 @@ Quote:
  We are about to study the idea of a computational process. Computational processes are abstract beings that inhabit computers. As they evolve, processes manipulate other abstract things called data. The evolution of a process is directed by a pattern of rules called a program. People create programs to direct processes. **In effect, we conjure the spirits of the computer with our spells.**
 
  A computational process is indeed much like a sorcerer's idea of a spirit. It cannot be seen or touched. It is not composed of matter at all. However, it is very real. It can perform intellectual work. It can answer questions. It can affect the world by disbursing money at a bank or by controlling a robot arm in a factory. **The programs we use to conjure processes are like a sorcerer's spells.** They are carefully composed from symbolic expressions in arcane and esoteric programming languages that prescribe the tasks we want our processes to perform.
+
+## Architecture of Open Source applications
+http://aosabook.org/en/index.html
+
+## High Performance Browser Networking
+https://hpbn.co/
+
+## Miscellaneous
+https://github.com/vhf/free-programming-books/blob/master/free-programming-books.md#c-1
